--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: true
+  local_dir: dist
   on:
     branch: master
 
