--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - "8"
 
+install: "npm install --save @firebase/app @firebase/firestore highcharts-vue vue-firestore"
+
 script:
   - "npm run build"
 
